# metricflow-server

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/metricflow_server/: auth.py  config.py  main.py  mcp_server.py
src/metricflow_server/api/: routes.py
